<resources>
    <string name="app_name">nmedia</string>
    <string name="hallo">NMedia! Hallo!</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="date">21 may at 18:36</string>
    <string name="name">Netology. University of Internet Professions</string>
    <string name="about">We help you grow in your profession and open new career horizons 💫<br/>

Netology is four levels of education:

🔹 For beginners who want to master an actual profession from scratch
🔹 For professionals who seek to grow in their careers
🔹 For managers who aim to strengthen leadership skills
🔹 And for companies that need to train a team

Marketing, design, programming, soft skills, MBA, project management, analytics and Data Science — choose what is closer to you and come to us for knowledge and growth.

Change is always the right choice 👌
http://netolo.gy/fEU
8 (800) 301-39-69
Varshavskoe shosse, 1, p. 6, 1st floor, office 105A, Moscow</string>
    <string name="removeRes">Remove</string>
    <string name="aboutHint">write about yourself</string>
    <string name="saveButtonDescription">save Button</string>
    <string name="editButtonDescription">edit Button</string>
    <string name="editRes">Edit</string>
    <string name="likes">Likes</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_share_post_video">Share post video</string>
    <string name="fabContentDescription">floating button: \"add\"</string>
    <string name="videoViewContentDescription">video content</string>
    <string name="fabVideoContentDescription">play button</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>