<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/avatar"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_launcher_foreground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#5D00F5"
            app:layout_constraintBottom_toTopOf="@id/post_published"
            app:layout_constraintEnd_toStartOf="@id/post_menu_button"
            app:layout_constraintStart_toEndOf="@+id/post_avatar"
            app:layout_constraintTop_toTopOf="@+id/post_avatar"
            android:text="@string/name"
            tools:text="@string/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post_published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/post_avatar"
            app:layout_constraintEnd_toEndOf="@id/post_author"
            app:layout_constraintStart_toEndOf="@id/post_avatar"
            app:layout_constraintStart_toStartOf="@id/post_author"
            app:layout_constraintTop_toBottomOf="@id/post_author"
            tools:text="@string/date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_menu_button"
            style="@style/Widget.AppTheme.ShareButton"
            android:checkable="false"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_over_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="post_published, post_avatar, post_menu_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/barrier_in_content"
            app:layout_constraintTop_toBottomOf="@id/barrier_over_content"
            tools:text="@string/about"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_in_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="post_video_view" />

        <ImageView
            android:id="@+id/post_video_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_youtube_svgrepo_com"
            app:layout_constraintBottom_toTopOf="@id/barrier_under_content"
            android:contentDescription="@string/videoViewContentDescription"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_video_view"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/post_video_view"
            app:srcCompat= "@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/fabVideoContentDescription"
            android:backgroundTint="#0000ffff"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/post_heart"
            style="@style/Widget.AppTheme.LikeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:button="@drawable/heart_selector"
            android:contentDescription="@string/likes"
            tools:text="100K"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.ShareButton"
            app:icon="@drawable/share_selector"
            tools:text="100M"
            android:checkable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/post_heart"
            app:layout_constraintBottom_toBottomOf="@id/post_heart"
            app:layout_constraintStart_toEndOf="@id/post_heart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/views"
            tools:text="500000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/post_heart"
            app:layout_constraintBottom_toBottomOf="@id/post_heart" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/eye"
            android:src="@drawable/ic_eye_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/post_heart"
            app:layout_constraintBottom_toBottomOf="@id/post_heart"
            app:layout_constraintEnd_toStartOf="@id/views" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_under_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="post_heart, share, views, eye" />

</androidx.constraintlayout.widget.ConstraintLayout>